--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
+    <title>Wordpress</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reponsive.css">
@@ -26,9 +28,143 @@
         <![endif]-->
     <!-- Custom Container -->
     <div id="container">
-        
+        <!-- Fixed Menu -->
+        <section class="section-fixed-menu">
+            <nav class="navbar navbar-default fixed-menu">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#"></a>
+                    </div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li><a class="active home" href="#">Trang chủ</a></li>
+                            <li><a class="fixtures" href="#">Lịch-Kết quả</a></li>
+                            <li><a class="video" href="">Video</a></li>
+                            <!-- <li><a class="feature" href="">Chọn Đội hình tiêu biểu</a></li> -->
+                            <li><a class="topics" href="">Bạn đọc viết</a></li>
+                        </ul>
+                        <form class="navbar-form navbar-right search-form">
+                            <div class="form-group">
+                                <input type="text" name="search" class="form-control" placeholder="Tìm kiếm">
+                                <input class="btn-search" type="submit">
+                            </div>
+                        </form>
+                    </div>
+                    <!-- /.navbar-collapse -->
+                </div>
+                <!-- /.container-fluid -->
+            </nav>
+        </section>
+        <!-- /Fixed Menu -->
+        <!-- Header -->
+        <header>
+            <div class="container">
+                <a href="#" class="logo" title="Báo Bóng đá - Bongdasub.vn"></a>
+            </div>
+            <!-- League Nav -->
+            <nav class="navbar navbar-default">
+                <div class="container">
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a class="home" href="/"></a>
+                            </li>
+                            <li><a href="#">Việt Nam</a></li>
+                            <li><a href="#">Anh</a></li>
+                            <li><a href="#">Tây Ban Nha</a></li>
+                            <li><a href="#">Italia</a></li>
+                            <li><a href="#">Đức</a></li>
+                            <li><a href="#">Pháp</a></li>
+                            <li><a href="#">Chuyển Nhượng</a></li>
+                            <li><a href="#">Champions League</a></li>
+                            <li><a href="#">Chuyên Đề</a></li>
+                            <li><a href="#">Lịch - KQ</a></li>
+                        </ul>
+                    </div>
+                    <!-- /.navbar-collapse -->
+                </div>
+                <!-- /.container -->
+            </nav>
+            <!-- /League Nav -->
+            <!-- Section Hot Category -->
+            <section class="section-hot-category-news">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-7 hot-category">
+                            <ul class="list-inline">
+                                <li>
+                                    <a href="">Đam mê</a>
+                                </li>
+                                <li>
+                                    <a href="">Thể thao</a>
+                                </li>
+                                <li>
+                                    <a href="">Ngôi sao</a>
+                                </li>
+                                <li>
+                                    <a href="">Thế giới</a>
+                                </li>
+                                <li>
+                                    <a href="">Tin vắn</a>
+                                </li>
+                                <li>
+                                    <a href="">Bóng đá & Cuộc sống</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-md-5 hot-news">
+                            <div class="row">
+                                <div class="col-md-2 hot-news-caption">
+                                    <span>Tiêu điểm</span>
+                                </div>
+                                <div class="col-md-10 hot-news-items">
+                                    <div class="slider">
+                                        <div class="item-slider">
+                                            <ul class="list-inline">
+                                                <li><a href="">Gerrard</a></li>
+                                                <li><a href="">Công Phượng</a></li>
+                                                <li><a href="">ĐT Việt Nam</a></li>
+                                                <li><a href="">Xuân Trường</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="item-slider">
+                                            <ul class="list-inline">
+                                                <li><a href="">Liverpool</a></li>
+                                                <li><a href="">Barcelona</a></li>
+                                                <li><a href="">HLV Hữu Thắng</a></li>
+                                                <li><a href="">Arsenal</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- /Section Hot Category -->
+            <!-- Section Hot Topics -->
+            <section class="section-hot-category-news">
+                <div class="container">
+                    <div class="col-md-9"></div>
+                    <div class="col-md-3"></div>
+                </div>
+            </section>
+            <!-- /Section Hot Topics -->
+        </header>
+        <!-- /Header -->
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/vendor/owl.carousel.min.js"></script>
         <script src="js/main.js"></script>
     </div>
     <!-- /Custom Container -->
