Added fixed menu. Just fixtures and Responsive bug at 281px left.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="container">
         <!-- Fixed Menu -->
         <section class="section-fixed-menu">
-            <nav class="navbar navbar-default fixed-menu">
+            <nav class="navbar navbar-default fixed-menu navbar-fixed-top">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
@@ -589,9 +589,7 @@
                             </div>
                             <div class="col-md-8 main-news">
                                 <a href="">
-                                    <div>
-                                        <img src="img/content-item-0.jpg" alt="" class="img-responsive">
-                                    </div>
+                                    <img src="img/content-item-0.jpg" alt="" class="img-responsive">
                                     <div class="title">
                                         <h3>CĐV Man City tức điên vì sai lầm của Bravo</h3>
                                     </div>
@@ -647,9 +645,7 @@
                             </div>
                             <div class="col-md-8 main-news">
                                 <a href="">
-                                    <div>
-                                        <img src="img/content-item-0.jpg" alt="" class="img-responsive">
-                                    </div>
+                                    <img src="img/content-item-0.jpg" alt="" class="img-responsive">
                                     <div class="title">
                                         <h3>CĐV Man City tức điên vì sai lầm của Bravo</h3>
                                     </div>
@@ -705,9 +701,7 @@
                             </div>
                             <div class="col-md-8 main-news">
                                 <a href="">
-                                    <div>
-                                        <img src="img/content-item-0.jpg" alt="" class="img-responsive">
-                                    </div>
+                                    <img src="img/content-item-0.jpg" alt="" class="img-responsive">
                                     <div class="title">
                                         <h3>CĐV Man City tức điên vì sai lầm của Bravo</h3>
                                     </div>
@@ -763,9 +757,7 @@
                             </div>
                             <div class="col-md-8 main-news">
                                 <a href="">
-                                    <div>
-                                        <img src="img/content-item-0.jpg" alt="" class="img-responsive">
-                                    </div>
+                                    <img src="img/content-item-0.jpg" alt="" class="img-responsive">
                                     <div class="title">
                                         <h3>CĐV Man City tức điên vì sai lầm của Bravo</h3>
                                     </div>
@@ -803,7 +795,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <!-- Div Content Item -->
+                        <!-- /Div Content Item -->
                         <!-- iFrame Suggest News -->
                         <div class="bdscframe">
                             <div class="cap">
